@@ -1,6 +1,8 @@
 RC 3
 ====
 
+- Added setter to ReleasePolicy property
+
 - Applied Curtis Schlak's patch fixing IOC-30
   "Add overload to Windsor AddComponent to specify the Lifestyle"
 
